structmeta-tests/tests/compile_fail/struct_meta/duplicate_rest_named_argument.rs
#[structmeta_tests::attr_rest_named_value(a = 10, a = 10)]
fn my_func() {}

fn main() {}
