structmeta-tests/tests/compile_fail/struct_meta/duplicate_rest_named_argument.stderr
error[E0433]: failed to resolve: could not find `attr_rest_named_value` in `structmeta_tests`
 --> $DIR/duplicate_rest_named_argument.rs:1:21
  |
1 | #[structmeta_tests::attr_rest_named_value(a = 10, a = 10)]
  |                     ^^^^^^^^^^^^^^^^^^^^^ could not find `attr_rest_named_value` in `structmeta_tests`
